--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,10 @@
 */
 /* ======= Base ======= */
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Bai Jamjuree', sans-serif;
     color: #24292e;
     background: #f5f5f5;
-    font-size: 14px;
+    font-size: 15px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: #444;
